[package]
name = "opbookmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=3.1.2", features = ["derive"] }
dirs = "=4.0.0"
notify = "=4.0.16"
semver = "=1.0.7"
serde = { version = "=1.0.136", features = ["derive"] }
serde_json = "=1.0.78"
